# ModelForge

./: .gitattributes  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  run_experiments.sh  run_plots.sh  run_training.sh
data/raw/immoscout24_models/: .gitignore
data/results/: .gitignore
docs/: Makefile  conf.py  datasets.md  demo.ipynb  index.rst  make.bat  own_dataset.md  plots.md  reproducibility.md
modelforge/datasets/: datasets.py
modelforge/datasets/anomaly_models/: anomaly_model.py  anomaly_model_entity.py
modelforge/datasets/weather_models/: weather_model.py  weather_model_entity.py
modelforge/experiments/: experiment_utils.py  multi_dataset_runner.py
modelforge/experiments/consolidation_strategy/: experiment_definitions.py
modelforge/experiments/embedding_dimensionality/: experiment_definitions.py
modelforge/experiments/method_ranking/: experiment_definitions.py
modelforge/experiments/performance/: experiment_definition.py
modelforge/experiments/pipeline_builders/: hierarchical_pipeline_builder.py  pipeline_builder.py  pipeline_factory.py  precomputed_embedding_pipeline_builder.py  prediction_interpretation_point_pipeline_builder.py  prediction_interpretaton_set_pipeline_builder.py  prediction_loss_point_pipeline_builder.py  prediction_loss_set_pipeline_builder.py  prediction_value_point_pipeline_builder.py  prediction_value_set_pipeline_builder.py
modelforge/model_clustering/cluster/: cluster_algorithm.py  cluster_labeler.py  grid_search.py  hierarchical_clustering.py  (+1 more)
modelforge/shared/: logger.py  losses.py
modelforge/visualization/: clustering_performance_plotter.py  compare_clusterings.ipynb  consolidation_helper.py  consolidation_strategy.ipynb  embedding_dimensionality.ipynb  helper.py  method_ranking.ipynb  plotting_functions.py
notebooks/: dask.ipynb  debug.ipynb
src/data/: make_dataset.py  model_trainer.py
src/shared/: dask.py  logger.py  losses.py
(+86 files in other folders)
