[tool.poetry]
name = "model-clustering"
version = "0.1.0"
description = ""
authors = ["Florian Siepe <sifr@viessmann.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
hydra-core = "^1.3.2"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
fastcluster = "^1.2.6"
dask = {extras = ["complete"], version = "^2024.1.1"}
distributed = "^2024.1.1"


[tool.poetry.group.dev.dependencies ]
black = "^24.1.1"
click = "^8.1.7"
sphinx = "^7.2.6"
coverage = "^7.4.1"
flake8 = "^7.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
